// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initAPIDefinitions should work with a disabled handler at the same path 1`] = `
Object {
  "API_DEFINITIONS": Object {
    "components": Object {
      "headers": Object {},
      "parameters": Object {
        "userId": Object {
          "in": "path",
          "name": "userId",
          "schema": Object {
            "type": "number",
          },
        },
      },
      "requestBodies": Object {},
      "responses": Object {},
      "schemas": Object {
        "User": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
    },
    "paths": Object {
      "/users/{userId}": Object {
        "put": Object {
          "operationId": "putUser",
          "parameters": Array [
            Object {
              "$ref": "#/components/parameters/userId",
            },
          ],
          "requestBody": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/components/schemas/User",
                },
              },
            },
          },
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "$ref": "#/components/schemas/User",
                  },
                },
              },
              "description": "The user",
            },
          },
          "tags": Array [
            "user",
          ],
        },
      },
    },
  },
  "importerCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers/getUser.js",
    ],
    Array [
      "/home/whoiam/project/src/handlers/putUser.js",
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🈁 - Generating the API_DEFINITIONS",
    ],
    Array [
      "debug",
      "⏳ - Ignored handler \\"getUser\\" since disabled by its definition!",
    ],
  ],
  "readDirCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers",
    ],
  ],
}
`;

exports[`initAPIDefinitions should work with a few handlers 1`] = `
Object {
  "API_DEFINITIONS": Object {
    "components": Object {
      "headers": Object {},
      "parameters": Object {
        "userId": Object {
          "in": "path",
          "name": "userId",
          "schema": Object {
            "type": "number",
          },
        },
      },
      "requestBodies": Object {},
      "responses": Object {},
      "schemas": Object {
        "User": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
    },
    "paths": Object {
      "/ping": Object {
        "get": Object {
          "operationId": "getPing",
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "additionalProperties": false,
                    "properties": Object {
                      "pong": Object {
                        "enum": Array [
                          "pong",
                        ],
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                },
              },
              "description": "Pong",
            },
          },
          "summary": "Checks API's availability.",
          "tags": Array [
            "system",
          ],
        },
      },
      "/users/{userId}": Object {
        "get": Object {
          "operationId": "getUser",
          "parameters": Array [
            Object {
              "$ref": "#/components/parameters/userId",
            },
          ],
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "$ref": "#/components/schemas/User",
                  },
                },
              },
              "description": "The user",
            },
          },
          "tags": Array [
            "user",
          ],
        },
      },
    },
  },
  "importerCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers/getPing.js",
    ],
    Array [
      "/home/whoiam/project/src/handlers/getUser.js",
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🈁 - Generating the API_DEFINITIONS",
    ],
  ],
  "readDirCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers",
    ],
  ],
}
`;

exports[`initAPIDefinitions should work with a few handlers in different plugins paths 1`] = `
Object {
  "API_DEFINITIONS": Object {
    "components": Object {
      "headers": Object {},
      "parameters": Object {
        "userId": Object {
          "in": "path",
          "name": "userId",
          "schema": Object {
            "type": "number",
          },
        },
      },
      "requestBodies": Object {},
      "responses": Object {},
      "schemas": Object {
        "User": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
    },
    "paths": Object {
      "/ping": Object {
        "get": Object {
          "operationId": "getPing",
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "additionalProperties": false,
                    "properties": Object {
                      "pong": Object {
                        "enum": Array [
                          "pong",
                        ],
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                },
              },
              "description": "Pong",
            },
          },
          "summary": "Checks API's availability.",
          "tags": Array [
            "system",
          ],
        },
      },
      "/users/{userId}": Object {
        "get": Object {
          "operationId": "getUser",
          "parameters": Array [
            Object {
              "$ref": "#/components/parameters/userId",
            },
          ],
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "$ref": "#/components/schemas/User",
                  },
                },
              },
              "description": "The user",
            },
          },
          "tags": Array [
            "user",
          ],
        },
      },
    },
  },
  "importerCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers/getPing.js",
    ],
    Array [
      "/home/whoiam/project/node_modules/@whook/dist/handlers/getUser.js",
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🈁 - Generating the API_DEFINITIONS",
    ],
  ],
  "readDirCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers",
    ],
    Array [
      "/home/whoiam/project/node_modules/@whook/dist/handlers",
    ],
  ],
}
`;

exports[`initAPIDefinitions should work with a few handlers in different plugins paths and an overriden one 1`] = `
Object {
  "API_DEFINITIONS": Object {
    "components": Object {
      "headers": Object {},
      "parameters": Object {
        "userId": Object {
          "in": "path",
          "name": "userId",
          "schema": Object {
            "type": "number",
          },
        },
      },
      "requestBodies": Object {},
      "responses": Object {},
      "schemas": Object {
        "User": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
    },
    "paths": Object {
      "/ping": Object {
        "get": Object {
          "operationId": "getPing",
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "additionalProperties": false,
                    "properties": Object {
                      "pong": Object {
                        "enum": Array [
                          "pong",
                        ],
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                },
              },
              "description": "Pong",
            },
          },
          "summary": "Checks API's availability.",
          "tags": Array [
            "system",
          ],
        },
      },
      "/users/{userId}": Object {
        "get": Object {
          "operationId": "getUser",
          "parameters": Array [
            Object {
              "$ref": "#/components/parameters/userId",
            },
          ],
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "$ref": "#/components/schemas/User",
                  },
                },
              },
              "description": "The user",
            },
          },
          "tags": Array [
            "user",
          ],
        },
      },
    },
  },
  "importerCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers/getPing.js",
    ],
    Array [
      "/home/whoiam/project/node_modules/@whook/dist/handlers/getUser.js",
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🈁 - Generating the API_DEFINITIONS",
    ],
  ],
  "readDirCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers",
    ],
    Array [
      "/home/whoiam/project/node_modules/@whook/dist/handlers",
    ],
  ],
}
`;

exports[`initAPIDefinitions should work with a few handlers in different plugins paths and an overriden one but with a different extension 1`] = `
Object {
  "API_DEFINITIONS": Object {
    "components": Object {
      "headers": Object {},
      "parameters": Object {
        "userId": Object {
          "in": "path",
          "name": "userId",
          "schema": Object {
            "type": "number",
          },
        },
      },
      "requestBodies": Object {},
      "responses": Object {},
      "schemas": Object {
        "User": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
    },
    "paths": Object {
      "/ping": Object {
        "get": Object {
          "operationId": "getPing",
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "additionalProperties": false,
                    "properties": Object {
                      "pong": Object {
                        "enum": Array [
                          "pong",
                        ],
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                },
              },
              "description": "Pong",
            },
          },
          "summary": "Checks API's availability.",
          "tags": Array [
            "system",
          ],
        },
      },
      "/users/{userId}": Object {
        "get": Object {
          "operationId": "getUser",
          "parameters": Array [
            Object {
              "$ref": "#/components/parameters/userId",
            },
          ],
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "$ref": "#/components/schemas/User",
                  },
                },
              },
              "description": "The user",
            },
          },
          "tags": Array [
            "user",
          ],
        },
      },
    },
  },
  "importerCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers/getPing.js",
    ],
    Array [
      "/home/whoiam/project/node_modules/@whook/dist/handlers/getUser.js",
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🈁 - Generating the API_DEFINITIONS",
    ],
  ],
  "readDirCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers",
    ],
    Array [
      "/home/whoiam/project/node_modules/@whook/dist/handlers",
    ],
  ],
}
`;

exports[`initAPIDefinitions should work with a filtered handler 1`] = `
Object {
  "API_DEFINITIONS": Object {
    "components": Object {
      "headers": Object {},
      "parameters": Object {
        "userId": Object {
          "in": "path",
          "name": "userId",
          "schema": Object {
            "type": "number",
          },
        },
      },
      "requestBodies": Object {},
      "responses": Object {},
      "schemas": Object {
        "User": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
    },
    "paths": Object {
      "/users/{userId}": Object {
        "put": Object {
          "operationId": "putUser",
          "parameters": Array [
            Object {
              "$ref": "#/components/parameters/userId",
            },
          ],
          "requestBody": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/components/schemas/User",
                },
              },
            },
          },
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "$ref": "#/components/schemas/User",
                  },
                },
              },
              "description": "The user",
            },
          },
          "tags": Array [
            "user",
          ],
        },
      },
    },
  },
  "importerCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers/getUser.js",
    ],
    Array [
      "/home/whoiam/project/src/handlers/putUser.js",
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🈁 - Generating the API_DEFINITIONS",
    ],
    Array [
      "debug",
      "⏳ - Ignored handler \\"getUser\\" via its tags (\\"other\\" not found in \\"user\\")!",
    ],
  ],
  "readDirCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers",
    ],
  ],
}
`;

exports[`initAPIDefinitions should work with a several handlers at the same path 1`] = `
Object {
  "API_DEFINITIONS": Object {
    "components": Object {
      "headers": Object {},
      "parameters": Object {
        "userId": Object {
          "in": "path",
          "name": "userId",
          "schema": Object {
            "type": "number",
          },
        },
      },
      "requestBodies": Object {},
      "responses": Object {},
      "schemas": Object {
        "User": Object {
          "properties": Object {
            "name": Object {
              "type": "string",
            },
          },
          "type": "object",
        },
      },
    },
    "paths": Object {
      "/users/{userId}": Object {
        "get": Object {
          "operationId": "getUser",
          "parameters": Array [
            Object {
              "$ref": "#/components/parameters/userId",
            },
          ],
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "$ref": "#/components/schemas/User",
                  },
                },
              },
              "description": "The user",
            },
          },
          "tags": Array [
            "user",
          ],
        },
        "put": Object {
          "operationId": "putUser",
          "parameters": Array [
            Object {
              "$ref": "#/components/parameters/userId",
            },
          ],
          "requestBody": Object {
            "content": Object {
              "application/json": Object {
                "schema": Object {
                  "$ref": "#/components/schemas/User",
                },
              },
            },
          },
          "responses": Object {
            "200": Object {
              "content": Object {
                "application/json": Object {
                  "schema": Object {
                    "$ref": "#/components/schemas/User",
                  },
                },
              },
              "description": "The user",
            },
          },
          "tags": Array [
            "user",
          ],
        },
      },
    },
  },
  "importerCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers/getUser.js",
    ],
    Array [
      "/home/whoiam/project/src/handlers/putUser.js",
    ],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "🈁 - Generating the API_DEFINITIONS",
    ],
  ],
  "readDirCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers",
    ],
  ],
}
`;

exports[`initAPIDefinitions should work with no handlers 1`] = `
Object {
  "API_DEFINITIONS": Object {
    "components": Object {
      "headers": Object {},
      "parameters": Object {},
      "requestBodies": Object {},
      "responses": Object {},
      "schemas": Object {},
    },
    "paths": Object {},
  },
  "importerCalls": Array [],
  "logCalls": Array [
    Array [
      "debug",
      "🈁 - Generating the API_DEFINITIONS",
    ],
  ],
  "readDirCalls": Array [
    Array [
      "/home/whoiam/project/src/handlers",
    ],
  ],
}
`;
